@@ -1,18 +1,17 @@
 package thinking.genericity;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
- * @author:qiming
- * @date: 2021/1/12
+ * @author zqw
+ * @date 2021/1/12
  */
-public class CompilerIntelligence {
+class CompilerIntelligence {
     public static void main(String[] args) {
-        List<? extends Fruit> list = Arrays.asList(new Orange());
-        Apple a = (Apple) list.get(0);
-        list.contains(new Apple());
-        list.indexOf(new Apple());
-
+        List<? extends Fruit> list = List.of(new Orange());
+        Apple notApple = (Apple) list.get(0);
+        System.out.println(notApple);
+        System.out.println(list.contains(new Apple()));
+        System.out.println(list.indexOf(new Apple()));
     }
 }
